src/objects/Part__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Id_Category__c</fullName>
        <label>Accounting Id - Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Last_Sync_Time_Category__c</fullName>
        <label>Accounting Last Sync Time - Category</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Response_Category__c</fullName>
        <label>Accounting Response - Category</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Name__c</fullName>
        <formula>Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Cost__c</fullName>
        <formula>Qty_Committed__c * Average_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <formula>Vendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Location_1__c</fullName>
        <label>Assigned Location 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Location_2__c</fullName>
        <label>Assigned Location 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Locations__c</fullName>
        <formula>IF(LEFT(Assigned_Location_1__c &amp; Assigned_Location_2__c,1) == &apos;;&apos;,
        (IF(LEN(Assigned_Location_1__c &amp; Assigned_Location_2__c) &gt; 1 ,
        (IF(RIGHT(Assigned_Location_1__c &amp; Assigned_Location_2__c,1) == &apos;;&apos;,
        LEFT(
        RIGHT(Assigned_Location_1__c &amp; Assigned_Location_2__c, (LEN(Assigned_Location_1__c &amp; Assigned_Location_2__c) - 1) ) ,
        (LEN(Assigned_Location_1__c &amp; Assigned_Location_2__c) - 2)
        )
        , RIGHT(Assigned_Location_1__c &amp; Assigned_Location_2__c, (LEN(Assigned_Location_1__c &amp; Assigned_Location_2__c) - 1)))),
        RIGHT(Assigned_Location_1__c &amp; Assigned_Location_2__c, (LEN(Assigned_Location_1__c &amp; Assigned_Location_2__c) - 1)))),
        (IF(RIGHT(Assigned_Location_1__c &amp; Assigned_Location_2__c,1) ==&apos;;&apos;,
        LEFT(Assigned_Location_1__c &amp; Assigned_Location_2__c, (LEN(Assigned_Location_1__c &amp; Assigned_Location_2__c) - 1)),
        Assigned_Location_1__c &amp; Assigned_Location_2__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Locations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Tag_1__c</fullName>
        <label>Assigned Tag 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Tag_2__c</fullName>
        <label>Assigned Tag 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_reorder_Max__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Auto Reorder To</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_reorder_Min__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Auto Reorder At</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avail_For_QB_Sync_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avail For QB Sync - Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvailableParts__c</fullName>
        <formula>Qty_In_Stock__c -  Qty_Committed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AvailableParts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Cost__c</fullName>
        <formula>Total_Cost__c -  Committed_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_For_Shopify_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Shopify Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for part category change</description>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Parts_As_String__c</fullName>
        <formula>TEXT(ROUND(AvailableParts__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Parts As String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Cost__c</fullName>
        <label>Average Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Part</description>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enviro_Fee_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environmental Fee Code</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enviro_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Environmental Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Foreign_Cost__c</fullName>
	    <label>Foreign Cost</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Currency</type>
    </fields>
    <fields>
        <fullName>Foreign_Pkg_Cost__c</fullName>
	    <label>Foreign Pkg Cost</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_FIFO_Bucket__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked when at one FIFO bucket is available for part.</inlineHelpText>
        <label>Has FIFO Bucket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intext_Col_13_Formula__c</fullName>
        <formula>IF(OR(CONTAINS(UPPER(Assigned_Tag_1__c ), UPPER(&apos;;CLEARANCE;&apos;)),CONTAINS(UPPER(Assigned_Tag_2__c ), UPPER(&apos;;CLEARANCE;&apos;))) , UPPER(&apos;CLEARANCE&apos;), &apos;&apos;)</formula>
        <label>Intext Col 13 Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intext_Col_21_Formula__c</fullName>
        <formula>IF(
AND(
NOT(ISNULL(Sale_Price__c)), 
Sale_Price__c != 0,
NOT(ISNULL(Retail_Price__c))
), 
IF(
FIND(&quot;.&quot;,TEXT(Retail_Price__c)) = 0, 
TEXT(Retail_Price__c) + &quot;.00&quot;,
IF(
(LEN(TEXT(Retail_Price__c))-FIND(&quot;.&quot;,TEXT(Retail_Price__c)) = 1),
TEXT(Retail_Price__c)+ &quot;0&quot;,
TEXT(Retail_Price__c)
)
), 
&quot;&quot;
)</formula>
        <label>Intext Col 21 Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intext_Col_7_Formula__c</fullName>
        <formula>IF(
FIND(&quot;.&quot;,TEXT(IF(AND(NOT(ISNULL(Sale_Price__c)), Sale_Price__c != 0), Sale_Price__c, Retail_Price__c))) = 0
, TEXT(IF(AND(NOT(ISNULL(Sale_Price__c)), Sale_Price__c != 0), Sale_Price__c, Retail_Price__c)) + &quot;.00&quot;
, IF(
(LEN(TEXT(IF(AND(NOT(ISNULL(Sale_Price__c)), Sale_Price__c != 0), Sale_Price__c, Retail_Price__c)))-FIND(&quot;.&quot;,TEXT(IF(AND(NOT(ISNULL(Sale_Price__c)), Sale_Price__c != 0), Sale_Price__c, Retail_Price__c))))= 1
, TEXT(IF(AND(NOT(ISNULL(Sale_Price__c)), Sale_Price__c != 0), Sale_Price__c, Retail_Price__c))+ &quot;0&quot;
, TEXT(IF(AND(NOT(ISNULL(Sale_Price__c)), Sale_Price__c != 0), Sale_Price__c, Retail_Price__c))
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intext Col 7 Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intext_Part_Index__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Intext Part Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Qty__c</fullName>
        <formula>Qty_In_Stock__c  -  Oversold_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Valuation__c</fullName>
        <description>This is field used for fusion report</description>
        <formula>Qty_In_Stock__c * Last_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is field used to show summary total on part inventory valuation</inlineHelpText>
        <label>Inventory Valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BP_Inventory_valuation__c</fullName>
        <description>This is field used for part inventory valuation report</description>
        <formula>Total_Cost__c - Oversold_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is field used for part inventory valuation report</inlineHelpText>
        <label>BP Inventory valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Description_Locked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Description Locked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_OrderLot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is OrderLot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Included_In_Intext_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Included In Intext Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Included_In_SOM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Included In SOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_MSRP_Locked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MSRP Locked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Processed_By_APF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used in APF tool. If Part is created/updated by APF Internally, then this will be set/reset. DON&apos;T set this flag manually.</description>
        <inlineHelpText>This checkbox is used in APF tool. If Part is created/updated by APF Internally, then this will be set/reset. DON&apos;T set this flag manually.</inlineHelpText>
        <label>Is Processed By APF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Replaced_Part_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Replaced Part Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Retail_Locked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Retail Locked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Superseded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Superseded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <formula>Part_Number__c &amp; &apos;-&apos; &amp; Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Counted__c</fullName>
        <label>Last Counted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Edited__c</fullName>
        <label>Last Edited</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Edited_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Edited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Price_Update__c</fullName>
        <label>Last Price Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Sold__c</fullName>
        <label>Last Sold</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Stocked__c</fullName>
        <label>Last Stocked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSRP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mfg_Part__c</fullName>
        <label>Mfg Part</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modifed_Time_Stamp__c</fullName>
        <formula>SUBSTITUTE(TEXT(LastModifiedDate), &apos;Z&apos;, &apos;.&apos; + MID(TEXT(MOD(MOD(LastModifiedDate - $System.OriginDateTime, 1), 86400)), 3, 3))</formula>
        <label>Modifed Time Stamp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Inventory_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Inventory Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Parts (Old Category)</relationshipLabel>
        <relationshipName>Parts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Lots__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order Lots</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oversold_Cost__c</fullName>
        <description>Oversold Cost</description>
        <label>Oversold Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oversold_Qty__c</fullName>
        <description>Oversold Qty</description>
        <label>Oversold Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRD1Cost__c</fullName>
        <label>PRD1 Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRD1Qty__c</fullName>
        <label>PRD1 Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRD2Cost__c</fullName>
        <label>PRD2 Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRD2Qty__c</fullName>
        <label>PRD2 Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRD3Cost__c</fullName>
        <label>PRD3 Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRD3Qty__c</fullName>
        <label>PRD3 Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Cost__c</fullName>
        <label>Package Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Package_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Package Qty</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Unit__c</fullName>
        <label>Package Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaged_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Packaged Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Aging_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Aging Detail</label>
        <referenceTo>Part_Aging_Detail__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_ID__c</fullName>
        <description>Merge of Part Number and Vendor Code</description>
        <formula>Part_Number__c  &amp; Vendor_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Merge of Part Number and Vendor Code</inlineHelpText>
        <label>Part ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Id_Text__c</fullName>
        <externalId>true</externalId>
        <label>Part Id (Text)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Part_Index__c</fullName>
        <label>Part Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Type__c</fullName>
        <label>Part Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Part</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Merchandise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publish_In_Feeds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish In Feeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qty_Committed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_In_Stock_As_String__c</fullName>
        <formula>IF(
 OR( ISNULL(Qty_In_Stock__c), Qty_In_Stock__c = 0 )
, &quot;0&quot;
, IF(
FIND(&quot;.&quot;,TEXT(Qty_In_Stock__c)) = 0
, TEXT(Qty_In_Stock__c) + &quot;.00&quot;
, IF(
(LEN(TEXT(Qty_In_Stock__c))-FIND(&quot;.&quot;,TEXT(Qty_In_Stock__c)))= 1
, TEXT(Qty_In_Stock__c)+ &quot;0&quot;
, TEXT(Qty_In_Stock__c)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty In Stock As String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty_In_Stock__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty In Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_On_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty On Order</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replaced_By_Part__c</fullName>
        <description>Vendor supplied part number which should be used in place of the part</description>
        <label>Replaced By Part</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Replaced_By_Part__c</fullName>
        <inlineHelpText>Old replaced by part number to delete previously created invalid part alternates</inlineHelpText>
        <label>Old Replaced By Part</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replaces_Part__c</fullName>
        <description>Vendor supplied part number which has been replaced by the part</description>
        <label>Replaces Part</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SKU_Number__c</fullName>
        <label>SKU Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Search_Tags__c</fullName>
        <label>Search Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopify_ID__c</fullName>
        <description>This field is used to store the Shopify ID of the part.</description>
        <label>Shopify ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopify_Product_Id__c</fullName>
        <formula>Shopify_Product__r.Product_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shopify Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopify_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopify Product</label>
        <referenceTo>Website_Product__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shopify_Sparse_Update_Fields__c</fullName>
        <description>Comma separated list of fields API name used for Shopify sparse update</description>
        <inlineHelpText>Comma separated list of fields API name used for Shopify sparse update</inlineHelpText>
        <label>Shopify Sparse Update Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shopify_URL__c</fullName>
        <formula>$Setup.Shopify_Configuration__c.Product_Base_URL__c + Shopify_Product_Id__c</formula>
        <label>Shopify URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Qty_On_Order__c &gt; 0,&apos;On Order&apos;,  IF( OR((Qty_In_Stock__c &lt; Auto_reorder_Min__c),( AND((Qty_In_Stock__c = Auto_reorder_Min__c),( Auto_reorder_Min__c !=  Auto_reorder_Max__c )))), &apos;Required&apos;, IF(Qty_In_Stock__c &gt; 0, &apos;In Stock&apos;,&apos;Out of Stock&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Superseded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced By</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Superseded_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Superseded To</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Parts (Superseded To)</relationshipLabel>
        <relationshipName>Parts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sync_Token_Category__c</fullName>
        <label>Sync Token - Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <formula>Vendor__r.Vendor_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name_And_Code__c</fullName>
        <formula>Vendor__r.Name &amp; &apos; (&apos; &amp; Vendor__r.Vendor_Code__c &amp; &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Name And Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Is_Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <description>Used for part category change</description>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRP_Part_Index__c</fullName>
        <defaultValue>1</defaultValue>
        <label>BRP Part Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Cost__c</fullName>
        <description>For foreign vendor calculated cost will be FX cost and for other vendors it will be last cost.</description>
        <formula>IF(($Setup.General_Configurations__c.Enable_Foreign_Exchange_Costing__c  &amp;&amp; Vendor__r.Is_Foreign_Vendor__c ),  Foreign_Cost__c ,  Last_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For foreign vendor calculated cost will be FX cost and for other vendors it will be last cost.</inlineHelpText>
        <label>Calculated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Package_Cost__c</fullName>
        <formula>IF(($Setup.General_Configurations__c.Enable_Foreign_Exchange_Costing__c  &amp;&amp; Vendor__r.Is_Foreign_Vendor__c ),  Foreign_Pkg_Cost__c ,  Package_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Package Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cassons_ID__c</fullName>
        <description>This field is used to store the Cassons ID for each record in the part.</description>
        <label>Cassons ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Included_In_BRP_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Included In BRP Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cassons_SOH__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Vendor SOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassons_Description__c</fullName>
        <label>Cassons Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Part</label>
    <listViews>
        <fullName>AG_Bulk_Parts</fullName>
        <columns>NAME</columns>
        <columns>Part_Id_Text__c</columns>
        <columns>Active__c</columns>
        <columns>Vendor__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Retail_Price__c</columns>
        <columns>MSRP__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Qty_Committed__c</columns>
        <columns>Qty_In_Stock__c</columns>
        <columns>Search_Tags__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Part_Number__c</field>
            <operation>equals</operation>
            <value>PN-2500</value>
        </filters>
        <label>AG Bulk Parts</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Vendor__c</columns>
        <columns>Part_ID__c</columns>
        <columns>MSRP__c</columns>
        <columns>Qty_In_Stock__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_Xero_Part_Category</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_Xero_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async Xero Part Category</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>